index.html modified

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,15 +10,14 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  
-    <title>VPR Client</title>
+
+    <title>VER Client</title>
     <link rel="icon" type="image/x-icon" href="./logo.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  
   </body>
 </html>
